--- a/src/markdown/english/1. Introduction.md
+++ b/src/markdown/english/1. Introduction.md
@@ -1,14 +1,14 @@
 Your greatest superpower is the ability to change yourself.
 
-This book is not for the unserious. This book is for those that truly want to grow, find peace, and find freedom from the porn trap. For those interested in quick "productivity tips" or numbered principles, these will not be found in this book. Instead, this book will provide you with understandings you can use to make your own decisions.
+This book is not for the unserious. This book is for those that genuinely want to grow, find peace, and find freedom from the porn trap. For those interested in quick "productivity tips" or numbered principles, these will not be found in this book. Instead, this book will provide you with understandings you can use to make your own decisions.
 
-Many people think that all they need to do to quit porn is to...stop doing it. They say, "just stop watching it. Don’t open the window. Don’t watch porn. Distract yourself." But porn is not a choice. Consider this: Did you ever make the ‘positive’ choice that you must have porn to masturbate? Or that you should/must/need porn-induced fantasies to spice up sex with your partner? Or, that at certain times in your life, you couldn’t enjoy a good night’s sleep or perhaps even pass an evening after a hard day at work without surfing for porn? Or that you couldn’t concentrate or handle stress without it? At what stage did you decide that you needed porn, that you needed it permanently in your life, feeling insecure, even panicstricken without porn, without your online harem? The fact is, we never wanted this.
+Many people think that all they need to do to quit porn is to...stop doing it. They say, "just stop watching it. Don’t open the window. Don’t watch porn. Distract yourself." But porn is not a choice. Consider this: Did you ever make the ‘positive’ choice that you must have porn to masturbate? Or that you should/must/need porn-induced fantasies to spice up sex with your partner? Or, that at certain times in your life, you couldn’t enjoy a good night’s sleep or perhaps even pass an evening after a hard day at work without surfing for porn? Or that you couldn’t concentrate or handle stress without it? At what stage did you decide that you needed porn, that you needed it permanently in your life, feeling insecure, even panic-stricken without porn, without your online harem? The fact is, we never wanted this.
 
-Scrap the idea of "methods", "guides" and "how-to's". How-to's don't work except for extreme basics. If success were prescriptive, then everybody would be a success. There are many who obsessively browse "nofap" material only continuing in the hope that they could one day become successful. If your desire has become dependent, like you are hysterically driven to obtain something whatever the cost, then somewhere deep down inside you do not really believe that you can achieve it.
+Scrap the idea of "methods", "guides" and "how-to's". How-to's don't work except for extreme basics. If success were prescriptive, then everybody would be a success. There are many who obsessively browse "nofap" material only continuing in the hope that they could one day become successful. If your desire has become dependent, like you are hysterically driven to obtain something whatever the cost, then somewhere deep down inside you do not believe that you can achieve it.
 
-Most likely, for those who have already been doing "nofap" or semen retention practices, they are likely familiar with failure.
+Most likely, those who have already been doing "nofap" or semen retention practices, are likely familiar with failure.
 
-"Nofap" practicers are used to saying “If I became free from porn, it would be great”, “It would be terrible if I could not be free”; and so on. Once you become dependent on the object of your desire you are drawn into such a violent whirlpool that you will exhaust yourself in the struggle. There is no reason to create this unneeded pressure.
+"nofap" practitioners are used to saying “If I became free from porn, it would be great”, “It would be terrible if I could not be free”; and so on. Once you become dependent on the object of your desire you are drawn into such a violent whirlpool that you will exhaust yourself in the struggle. There is no reason to create this unneeded pressure.
 
 Understand failure is not falling down. Failure is never having reached the goal, ever. And the reason that that happens is that a human being is always looking for something to do because he has been conditioned by the concept and by the notion that there is something that if he does correctly, it will lead him to success.
 
@@ -31,17 +31,17 @@ Why is PMO most annoying? - This is because it is embarrassing to talk about. Du
 
 Inspiration is perishable—act on it immediately. If you are inspired to read this book, consider yourself lucky. Many would have not found this and would miss out on the truths made available to them. If you want to postpone reading this book until later, read it now anyway. There is no “later.” Most of our suffering comes from avoidance.
 
-If you truly want to become the best version of yourself, and to become more capable, you should place an importance in finishing this material. The only one that can do this is you. Only you can heal yourself.
+If you truly want to become the best version of yourself and to become more capable, you should place importance on finishing this material. The only one that can do this is you. Only you can heal yourself.
 
-One thing that must be done however, is you must put down your ego while reading. If you do not have humility while reading, you will not be able to absorb any new ideas or understandings. If you think you "already know all this", then you should already be free. Keep this in mind - You cannot change yourself without humility.
+One thing that must be done, however, is you must put down your ego while reading. If you do not have humility while reading, you will not be able to absorb any new ideas or understandings. If you think you "already know all this", then you should already be free. Keep this in mind - You cannot change yourself without humility.
 
 One of the things Krishnamurti (philosopher) talks about is being in an internal state of revolution. You should always be internally ready for a complete change. Whenever we say we’re going to *try* to do something or *try* to form a habit, we’re wimping out.
 
 **Do not skip chapters. Every chapter is important for your learning.**
 
-I also would like you to approach this book with the aim to gain new insight and understandings, rather than trying to *believe your problems away*. Evidence shows that you must truly understand the reality of habits/addictions to change your decision making, and blind belief does not help that.
+I also would like you to approach this book with the aim to gain new insight and understanding, rather than trying to *believe your problems away*. Evidence shows that you must truly understand the reality of habits/addictions to change your decision-making, and blind belief does not help that.
 
-I may use the terms good/bad in this book, but when I use those terms I actually mean "leading to freedom" or "leading to delusion". We have applied the label good and bad to basically everything, but I want you to step back and to digest things for what they really are - without preconceptions blinding your view.
+I may use the terms good/bad in this book, but when I use those terms I actually mean "leading to freedom" or "leading to delusion". We have applied the labels good and bad to basically everything, but I want you to step back and digest things for what they really are - without preconceptions blinding your view.
 
 Have fun reading!
 
