--- a/src/markdown/english/4. Brainwashing.md
+++ b/src/markdown/english/4. Brainwashing.md
@@ -1,16 +1,18 @@
 Before you can lie to another, you must first lie to yourself.
 
-The brainwashing of PMO is the leading cause of failure for users that are trying to leave PMO once and for all, but end up failing. Brainwashing is the engrained idea that porn provides any benefit. It is also the idea that you are entitled to sex or porn and that sex should be the highest goal in your life.
+The brainwashing of PMO is the leading cause of failure for people that are trying to leave PMO once and for all but end up failing. Brainwashing is the engrained idea that porn provides any benefit. It is also the idea that you are entitled to sex or porn and that sex should be the highest goal in your life.
 
-It includes our upbringing in society, reinforced by the brainwashing of our own addiction and combined with the most powerful influences - our friends, relatives and colleagues. The phrase ’giving up’ is a classic example of brainwashing, implying genuine sacrifice. The beautiful truth is there’s nothing to give up; on the contrary, you are facing freedom. It takes a level of contrarianism to say, “Nope. I’m just going to do my own thing”. That is courage.
+It includes our upbringing in society, reinforced by the brainwashing of our addiction and combined with the most powerful influences - our friends, relatives, and colleagues. The phrase "giving up" is a classic example of brainwashing, implying genuine sacrifice. The beautiful truth is there’s nothing to give up; on the contrary, you are facing freedom. It takes a level of contrarianism to say, “Nope. I’m just going to do my own thing”. That is courage.
 
-Ironically, the most powerful force in this confusion is the user themselves. It’s a fallacy that users are weak-willed or physically weak people. You have to be physically strong to deal with addiction after you know it exists. Perhaps the most painful aspect of porn users is that they place themselves as unsuccessful losers and insufferable introverts. A friend could likely be more interesting in person if they hadn’t put themselves down by wasting their energy through PMO.
+Ironically, the most powerful force in this confusion is the user themselves. It’s a fallacy that porn users are weak-willed or physically weak people. Perhaps the saddest aspect of porn to observe users is that they put themselves as unsuccessful losers and insufferable introverts. A friend could likely be more interesting in person if they hadn’t put themselves down by wasting their energy through PMO.
+
+In this age of information, individuals are trained to think whatever society tells them to. This over-socialization denies intelligence; when technology has this impact on you, you are no individual. When one sets themselves apart from the status quo they can find clarity; for example, porn being "normal" or "cultured" will be programmed into your mind unless you stop denying intelligence and actually process things yourself.
 
 One aspect of brainwashing is stress. Porn has subconsciously registered in billions of people's brains as a 'method to relieve stress'. Users believe that it allows them to relax - to move away from their life's difficulties and that it benefits them. This belief, however, is interpreting everything backward. Porn creates the stress.
 
 Porn creates stress by overstimulating your dopamine receptors. Users illude themselves into believing that it is required for relieving stress, even though before they became users, they had no need. And to 'relieve' the pressure, they use it again.
 
-Our brain builds a response to emotions that trigger 'pangs'. These emotions are fear, anxiety, and boredom. Fear (in a user's life) typically comes from everyday events that happen in life, such as fear of getting laid off, fear of failure or having a bad day. In these cases, porn is imagined as a "savior" at the end of the day that will make everything better - even though it will make everything harder to cope with.
+Our brain builds a response to emotions that trigger 'pangs'. These emotions are fear, anxiety, and boredom. Fear (in a user's life) typically comes from everyday events that happen in life, such as fear of getting laid off, fear of failure, or having a bad day. In these cases, porn is imagined as a "savior" at the end of the day that will make everything better - even though it will make everything harder to cope with.
 
 Anxiety and uncertainty are also emotions where a similar response happens. In response to not being able to work out how something will play out, this plagues our minds with negative thoughts. Pangs can occur in these moments because porn is interpreted as something that fixes negative emotions. Instead, it creates these negative emotions, worsening over time.
 
@@ -20,7 +22,7 @@ We are not really attracted to the lewd clips we browse through. We are not real
 
 The higher your feelings of shame, sin, or anxiety, and the more taboo and fetishized the content is, the higher of a dopamine rush you feel. This only increases the strength of the habitual pathway, causing more desensitization.
 
-Porn is actually relatively easy to quit when you understand its true nature. This is because it provides no advantages — then you can completely throw it out from your life and it will not even be attractive. You wouldn’t eat a poison “in moderation”.
+Porn is actually relatively easy to quit when you understand its true nature. This is because it provides no advantages — then you can completely throw it out of your life and it will not even be attractive. You wouldn’t eat poison “in moderation”.
 
 Choice is our greatest power in life. Once you realize you have this power, you are like an eagle who grew up thinking he was a chicken, living with other chickens — but one day learned he could fly.
 
@@ -29,9 +31,9 @@ Choice is our greatest power in life. Once you realize you have this power, you 
 
 Imagine your limbic brain (monkey brain) is a dumb electrical appliance. If you unplug 99 out of 100 power cords (false reasons to use porn), it doesn’t know you did that, all it knows is it still has power. You have to unplug every cord, every reason. Then, you will find peace like you’ve never known.
 
-Be careful of your own negativity. Pessimism is self-fulfilling. If you say you are going to fail, you nearly always will. If you say something will be bad, you will nearly always percieve it that way. There is no benefit to creating that negativity in the first place.
+Be careful of your own negativity. Pessimism is self-fulfilling. If you say you are going to fail, you nearly always will. If you say something will be bad, you will nearly always perceive it that way. There is no benefit to creating that negativity in the first place.
 
-Peace comes from truth; but how can you find truth? One of the ways in which I know that I am finding truths is that the problem is solved for good.
+Peace comes from truth; but how can you find truth? One of the ways in which I know that I am finding the truth of something is that the problem is solved for good.
 
 Examples of what users say:
 
@@ -44,30 +46,30 @@ Someone repeating these mantras to themselves is a form of subconscious rational
 In reality, the key to the mental prison or porn is in your own mind. You can not ask another person for this key - one must find it for themselves. The answers lie within yourself. Yet we have been told to look everywhere but ourselves for answers.
 
 ## Brainwashing Through Bad Advice
-Unfortunately, the world is filled with bad advice. So much in fact, that it makes sense for the majority to not be successful in what they truly want to achieve. The individual has to filter out the effective information from the ineffective information. It takes effort, but it is a liberating process that provides one the steering wheel on life. However, most have been conditioned to hand over the reigns to "professionals" who seemingly know everything. This opens the gates for shallow advice, con artists, and wasting time.
+Unfortunately, the world is filled with bad advice. So much in fact, that it makes sense for the majority to not be successful in what they truly want to achieve. The individual has to filter out the effective information from the ineffective information. It takes effort, but it is a liberating process that provides one with the steering wheel of life. However, most have been conditioned to hand over the reins to "professionals" who seemingly know everything. This opens the gates for shallow advice, con artists, and wasting time.
 
 The trouble with advice that does not work - is that those that preach it - pronounce their advice as given fact. For one who wants to truly understand the scope of their addiction and how recovery works, if they do not unlearn these false understandings and unproductive ways of thinking then they will be forever held to them.
 
-The bad advice causes one to feel the need to constantly reinforce their newly picked up beliefs. However, *the constant assertion of belief is an indication of fear*. You do not need to constantly assert truth, because it is undisputed.
+The bad advice causes one to feel the need to constantly reinforce their newly picked-up beliefs. However, *the constant assertion of belief is an indication of fear*.
 
 There are many unproductive activities that people "*trying*" to leave porn and masturbation practice. One common thing is counting days, where a person counts to an arbitrary number of days for progress. This may seem like a good way to set goals, but the reality is, freedom is found on day 1. Not at day 30, not at day 90, not at day 1000. Freedom is found when you let go of the attachment of porn to your life. When you stop chasing. You do not need to keep rewarding yourself for not harming yourself. **Otherwise you might still see attraction in instant pleasures, or you might be looking for pleasure through progress**. Both of these things are not productive. Counting days adds extra pressure, and it comes with the notation that not self-sabotaging is impressive. It is just wise if one seeks a productive life, nothing more.
 
-People have this idea of "one step at a time" where they want to take each day at a time after quitting porn. However, this comes with the notion that something bad is happening. Like something is being lost from your life. Would you "take one day at a time" after you became free from a prison? No! Because you would no longer be trapped. Nothing changes physically, but just these changes in idology make it so a person who wants to find freedom treats it like the opposite - like a prison.
+People have this idea of "one step at a time" where they want to take each day at a time after quitting porn. However, this comes with the notion that something bad is happening. Like something is being lost from your life. Would you "take one day at a time" after you became free from a prison? No! Because you would no longer be trapped. Nothing changes physically, but just these changes in ideology make it so a person who wants to find freedom treats it like the opposite - like a prison.
 
-Another way this attachment to porn can appear is through doing a certain amount of days, such as 7, 14 or 30 days of no PMO/MO. I do not understand it. Why return to something that has no benefit in your life? Why view this glimpse of freedom to dunk your head back in under the water? These people still believe it has some value in their lives. And it might, if they see benefit in instant 'pleasures'. But if you do not see benefit in "instant pleasures" there is nothing in porn that you desire.
+Another way this attachment to porn can appear is through doing a certain amount of days, such as 7, 14, or 30 days of no PMO/MO. I do not understand it. Why return to something that has no benefit in your life? Why view this glimpse of freedom to dunk your head back in under the water? These people still believe it has some value in their lives. And it might if they see a benefit in instant 'pleasures'. But if you do not see a benefit in "instant pleasures" there is nothing in porn that you desire.
 
-Another flawed idiology is "weening". Weening is the process of spreading usage apart over time, or lowering "severity" of a bad habit. This is typically used for drug addictions, where the body has a physical withdrawl and negative reaction from absence of a specific drug. However, porn does not have any physical withdrawl. Therefore, "weening" would only make sense if it worked for any mental withdrawl. The thing is, in the time between sessions, a person will start to fantasize about their next usage; they will build up dopamine and anticipation for it. In a sense, this can be even worse than not "weening" because of this even higher amount of anticipation. You do not need to ween something when you can find freedom in an instant.
+Another flawed ideology is "weening". Weening is the process of spreading usage apart over time or lowering the "severity" of a bad habit. This is typically used for drug addictions, where the body has a physical withdrawal and negative reaction from the absence of a specific drug. However, porn does not have any physical withdrawal. Therefore, "weening" would only make sense if it worked for any mental withdrawal. The thing is, in the time between sessions, a person will start to fantasize about their next usage; they will build up dopamine and anticipation for it. In a sense, this can be even worse than not "weening" because of this even higher amount of anticipation. You do not need to ween something when you can find freedom in an instant.
 
-The last major flawed idiology I will write on is "monsters". You may have heard the terms "little monster" and "big monster" to describe different parts of the human psyche. These are attempts at trying to simplify the dynamic of the human mind, however it fails at doing this. It creates a Me vs Them scenario. You create this imaginary enemy (this "monster"/primite brain) and you imagine yourself fighting this figure. The reality is, no big or little "monster" exist. Your "primitive brain" is not out to get you. It is an integral part of your system. One that is there to help you, not to hinder you. And you may say, this is wrong, that it takes away control from your life. And this may be true. But this occurs when you have a cognitive dissonance - when you are trying to force a belief/truth that you do not understand or that you have not figured out yourself.
+The last major flawed ideology I will write about is "monsters". You may have heard the terms "little monster" and "big monster" to describe different parts of the human psyche. These are attempts at trying to simplify the dynamic of the human mind, however, it fails at doing this. It creates a Me vs Them scenario. You create this imaginary enemy (this "monster"/primitive brain) and you imagine yourself fighting this figure. The reality is, no big or little "monster" exist. Your "primitive brain" is not out to get you. It is an integral part of your system. One that is there to help you, not to hinder you. And you may say, this is wrong, that it takes away control from your life. And this may be true. But this occurs when you have a cognitive dissonance - when you are trying to force a belief/truth that you do not understand or that you have not figured out yourself.
 
-**Your primitive mind will not ignore an understood truth, but it will ignore a belief**. And some may say there is no difference, but this is false. Truth is digested and critiqued, found by the indivual. While belief is easily unfounded, based on little substance, and often external. This is the difference.
+**Your primitive mind will not ignore a solved, understood truth, but it will ignore a belief**. And some may say there is no difference, but this is false. Truth is digested and critiqued, found by the individual. While belief is easily unfounded, based on little substance, and often external. This is the difference.
 
 You can't force understanding of truth when you have an expectation of what it is - you must be open to whatever result is there when you find the answer. For example, if porn turned out to be beneficial for someone who wants a productive life, it would be intelligent to use it. Or if it turned out to be unproductive, you should not, and find freedom. With this in mind, you can use your deductive capabilities to quantify truth; when you have humility and sincerity of course.
 
-So it is not productive to hate parts of your own mind, and the system that makes up your being. Self-hatred has no benefit or purpose. There is no invisible enemy that is out to get you every day, to force you into bad habits. It is just your brain making the most logical conclusions and actions based on your understandings of what truth is.
+So it is not productive to hate parts of your own mind, and the system that makes up your being. Self-hatred has no benefit or purpose. There is no invisible enemy that is out to get you every day, to force you into bad habits. It is just your brain making the most logical conclusions and actions based on your understanding of what truth is.
 
 "It was not some mysterious monster in my mind which forced me to use porn, but it was me all along."
 
-Freedom is not found through substitution or escape from environment. Freedom is found through understanding the nature of what holds us back. Not through fighting or hating these things. We want to fight problems more than we want to understand them.
+Freedom is not found through substitution or escape from the environment. Freedom is found through understanding the nature of what holds us back. Not through fighting or hating these things. We want to fight problems more than we want to understand them.
 
 When you discover the truth, bad habits can disappear with little effort through understanding. Only when the mind is still, tranquil, not expecting or grasping or resisting a single thing, is it possible to see what is true. It is the truth that liberates, not your effort to be free.
