--- a/src/markdown/english/8. Transmutation.md
+++ b/src/markdown/english/8. Transmutation.md
@@ -4,25 +4,25 @@ That life that you're supposed to have inside of you, that drive that you're sup
 
 But once your survival needs are met, then what's left is the biggest primitive need, the biggest desire, to continue the family line. And once you get rid of that desire, your monkey brain thinks you've achieved most of what you needed to do with your life (on a physical level). And so, of course, you feel lethargic, lazy, and tired.
 
-Instead of being in this lethargic state, where your body acts like it has achieved what it needs in life, you can create the complete opposite state via retaining your semen, and in doing so, retaining your sexual energy. This is called transmutation.
+Instead of being in this lethargic state, where your body acts like it has achieved what it needs in life, you can create the complete opposite state by retaining your semen, and in doing so, retaining your sexual energy. This is called transmutation.
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Drawing of a person with an aura (not found)" src="http://localhost:8080/md_images/field_aura.png" height="250px" class="mdimg"></div>
 
 Transmutation is the art of directly transferring the kept sexual energy (from semen retention) into productive expenditures which encourage growth. It may seem weird, but it has been practiced in professional boxing for hundreds of years.
 
-You may think it is as simple as not doing releasing semen. However, retaining the energy is not enough. Learn to transmute it and convert it into success.
+You may think it is as simple as not releasing semen. However, retaining the energy is not enough. Learn to transmute it and convert it into success.
 
 When I talk about energy, I am not just talking about bodily energy, but the actual "amount of life" within you. When you release semen, you spend some of your own energy/life in this process and that is the tradeoff.
 
-The sexual energy is such a hurricane of force that it needs to find an outlet. It's either going to find an outlet through MO or through transmutation in which you lift that energy upwards and outwards to bring to life the fruits of your labor, the desires that are in your heart.
+Sexual energy is such a hurricane of force that it needs to find an outlet. It's either going to find an outlet through physical release or through transmutation in which you lift that energy upwards and outwards to bring to life the fruits of your labor, the desires that are in your heart.
 
-Also just a quick note, you may feel a little more on-edge due to different changes in your body's chemistry when doing semen retention. Keep your composure, as anger is its own punishment, as an angry person trying to push your head below water is drowning at the same time.
+Also just a quick note, you may feel a little more on edge (angry) due to different changes in your body's chemistry when doing semen retention. Keep your composure, as anger is its own punishment, as an angry person trying to push your head below water is drowning at the same time.
 
 ## Aura / Life Force
 
-When semen retention is practiced (without still craving), something happens where the person gains a sort of "Aura" around them which attracts other people towards them. Some people link this to spiritual means, some link it to bodily changes and how you carry yourself. However, this effect of a general rise in attractiveness is not a one-off.
+When semen retention is practiced (without still craving), something happens where the person gains a sort of "Aura" around them which attracts other people towards them. Some people link this to spiritual means, some link it to bodily changes, pheromones, or how you carry yourself. However, this effect of a general rise in attractiveness is not a one-off.
 
-This "seminal energy" generally creates an increased attraction towards your being. People discuss attraction from women when they talk about this, but this effects all interactions. People may strike up conversations with you more, and generally people will find you more interesting (likely also to do with dopamine).
+This "seminal energy" generally creates an increased attraction toward you. People discuss attraction from women when they talk about this, but this affects all interactions. People may strike up conversations with you more, and generally, people will find you more interesting (likely also to do with dopamine).
 
 You may notice this "Aura", or you may not, but when your dopamine receptors heal, and through transmutation, social interaction will be a lot more interesting.
 
@@ -30,17 +30,17 @@ However, stay humble through all of this; rather than making fun of those who we
 
 ## Outlets For Transmutation
 
-There are a number of physical outlets for sexual transmutation. These are either physical or mental. Likely the most valuable outlet for sexual energy is creativity because it has infinite possibilites in what you can create and express.
+There are several outlets for sexual transmutation. These are either physical or mental. Likely the most valuable outlet for sexual energy is creativity because it has infinite possibilities in what you can create and express.
 
-Transmutation does not have a how-to guide. How-to's do not work except for extreme basics. You kind of just get a feel for it, when you notice it. And when you do, you realize what you were missing this whole time.
+Transmutation does not have a how-to guide. How-tos do not work except for extreme basics. You kind of just get a feel for it, when you notice it. And when you do, you realize what you were missing this whole time.
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a person with energy around them (not found)" src="http://localhost:8080/md_images/circle_aura.png" height="250px" class="mdimg"></div>
 
 ### Physical
 
-The first method of transmutation is simply working out. If you exercise you bring that energy up into your body and your efforts will be super charged, meaning your workouts will be super charged with the current of your new-found energy and "your body wanting to f*ck the world".
+The first method of transmutation is simply working out. If you exercise you bring that energy up into your body and your efforts will be supercharged, meaning your workouts will be fueled with the current of your new-found energy and "your body wanting to f*ck the world".
 
-I try to do at least some kind of exercise every morning, first thing in the morning and that is either lifting weights or calisthenics and I highly highly encourage you to do the same. When you do it early in the morning, your body is most "awake" and it is also a way to enjoy the mornings.
+I try to do at least some kind of exercise every morning, first thing in the morning and that is either lifting weights or calisthenics and I highly encourage you to do the same. When you do it early in the morning, your body is most "awake" and it is also a way to enjoy the mornings.
 
 Regular exercise also increases the health of your dopamine receptors (D2/D3).
 
@@ -48,7 +48,7 @@ Regular exercise also increases the health of your dopamine receptors (D2/D3).
 
 The second method of transmutation is meditation. This is one of the most important transmutative processes but I think it's often easier and better to meditate after you've worked out. I've just found it to be true that once I've had a workout and I've got oxygen running through my brain, when I meditate I go much deeper into that meditation; and it's almost like this deep lost trance or this stepping into the silence, a true void and when I emerge out of it I have all these insights and a deeper understanding of how I should conduct myself to bring about results and joy in my life.
 
-One thing I would advise, is that the mindfulness you practice in meditation should not be the end goal, but the goal should be to have mindfulness in every moment, to the point where meditation is no longer needed.
+One thing I would advise is that the mindfulness you practice in meditation should not be the end goal, but the goal should be to have mindfulness in every moment, to the point where meditation is no longer needed.
 
 Meditation also supports positive dopamine production significantly.
 
@@ -63,9 +63,9 @@ Your brain consumes a lot of your energy when you study hard; but that's an amaz
 
 ### Enjoying The Arts
 
-Method number four is is experiencing joy through music and dance.
+Method number four is experiencing joy through music and dance.
 
-When you occasionally listen to music (just jamming out to some uplifting stuff), while feeling the music, you can be thinking about what you are working towards, but **more importantly** the process to get there. And so you just end up turning that sexual energy into a state of tremendous joy. And when you're in a state of joy and gratitude and playfulness, you often find that the law of attraction starts working faster and you end up accomplishing your goals inadvertently.
+When you occasionally listen to music (just jamming out to some uplifting stuff), while feeling the music, you can be thinking about what you are working towards but **more importantly** the process to get there. And so you just end up turning that sexual energy into a state of tremendous joy. And when you're in a state of joy and gratitude and playfulness, you often find that the law of attraction starts working faster and you end up accomplishing your goals inadvertently.
 
 ### Social Interactions
 
@@ -74,21 +74,21 @@ Transmutation Method number five is to have inspired social interactions.
 After some time on semen retention, your life has so much more weightiness and playfulness in this. And so you're just incredibly charismatic around your friends.
 So in that state of pent-up sexual energy, an incredibly fun and productive thing you could do is to just meet up with your friends or meet up with a cute girl that you're into and just hang out with them.
 
-You'll find that you're so much weightier, you're so much more playful and at the same time, you're more inspiring to them as well, as you have more sexual energy available and you have more life within yourself. You can do even better in social interactions when you place a high value on your attention to what the other person is saying - they will respect it; especially if you remember what they say.
+You'll find that you're so much weightier, you're so much more playful, and at the same time, you're more inspiring to them as well, as you have more sexual energy available and you have more life within yourself. You can do even better in social interactions when you place a high value on your attention to what the other person is saying - they will respect it; especially if you remember what they say.
 
 ### Creativity & Expression
 
 Transmutation Method Number 6 is having a creative output, either through music, art, painting, poetry, filmmaking, writing, anything creative.
 
-You will find that when you capture your sexual energy, you can have an incredible creative output. This can be really helpful on the journey to create things which you truly treasure. Expression is also a way to recover from things you do not yet understand; to turn hard-to-read thoughts into forms of art is an effective process of recovery.
+You will find that when you capture your sexual energy, you can have an incredible creative output. This can be really helpful on the journey to create things that you truly treasure. Expression is also a way to recover from things you do not yet understand; turning hard-to-read thoughts into forms of art is an effective process of recovery.
 
 ## About Transmutation
 
-There are also things like cold showers, cleaning your environment, thinking about the processes to achieve goals, which are not direct ways of transmuting energy, but they definitely support it. However, do not try to add in tens of new routines into your day at once and stressing over missing timings. You want to slowly but maticulously build up a routine and lifestyle that supports you and your self-growth, but you do not want your routine to be too environment-dependant either.
+There are also things like cold showers, cleaning your environment, and thinking about the processes to achieve goals, which are not direct ways of transmuting energy, but they definitely support it. However, do not try to add tens of new routines into your day at once and stress over missing timings. You want to slowly but meticulously build up a framework and routine/lifestyle that supports you and your self-growth, but you do not want your routine to be too environment-dependent either.
 
-It is best to build new actions or habits around simple and accessible things such as: tea before bed, food timings, morning showers, and other consistent events.
+It is best to build new actions or habits around simple and accessible things such as tea before bed, food timings, morning showers, and other consistent events.
 
-Making what you want to do the easiest option will lead you to do it, and if what you want to do is not currently the easiest option, make it so by changing your environment and understandings. It is true some things will always be difficult, but in those cases, staying true to your identity and greator purpose should be the reason to do these things.
+Making what you want to do the easiest option will lead you to do it, and if what you want to do is not currently the easiest option, make it so by changing your immediate environment, and better yet, understanding it. It is true some things will always be difficult, but in those cases, staying true to your identity and greater purpose should be the reason to do these things.
 
 Scott Adams famously said, “Set up systems, not goals.” Use your judgment to figure out what kinds of environments you can thrive in, and then create an environment around you so you’re statistically likely to succeed.
 
@@ -96,13 +96,13 @@ Scott Adams famously said, “Set up systems, not goals.” Use your judgment to
 
 Some people do not want to see you succeed.
 
-Crab mentality, also known as crab theory, is a way of thinking, best described by the phrase: "if I can't have it, neither can you". The analogy in human behavior is claimed to be that members of a group will attempt to reduce the self-confidence of any member who achieves success beyond the others, out of envy, resentment, spite, conspiracy, or competitive feelings, to halt their progress. Because you're rising in energy and also healing yourself things will get electrical.
+Crab mentality, also known as crab theory, is a way of thinking, best described by the phrase: "if I can't have it, neither can you". The analogy in human behavior is claimed to be that members of a group will attempt to reduce the self-confidence of any member who achieves success beyond the others, out of envy, resentment, spite, conspiracy, or competitive feelings, to halt their progress. Because you're rising in energy and also healing yourself things will get electrical.
 
 Some people in your life may be like this. They see success and because they have not found it in themselves, they try to bring you down to their level. What you have to realize is that clashing with these people is a waste of time. You are just fighting ignorance (which is a losing battle), and you are showing them they are relevant.
 
-Instead, for people who discourage this level of energy (some call them "energy vampires"), we should be indifferent no matter through what they do. Acting indifferent will make them feel weaker. Either they will cave in and ask for your help, or they will spiral into their own negativity. In either case, you do not want to surround yourself with these types of people.
+Instead, for people who discourage this level of energy (some call them "energy vampires"), we should be indifferent no matter what they do. Acting indifferent will make them feel weaker. Either they will cave in and ask for your help, or they will spiral into their own negativity. In either case, you do not want to surround yourself with these types of people.
 
-If a friend is not someone who encourages your self-growth, tell them (in person) directly and unforgivingly the issues you have with them and if they do not have the humility to change, cut them off. Family is trickier, because you can't give up on family. But at the same time, parents or siblings can be negative influences on you whether they realize it or not. For this, I would say to change your environment often, learn how to deal with human nature and learn how to influence those who do not want to listen to you.
+If a friend is not someone who encourages your self-growth, tell them (in person) directly and unforgivingly the issues you have with them and if they do not have the humility to change, cut them off. Family is trickier because you can't give up on family. But at the same time, parents or siblings can be negative influences on you whether they realize it or not. For this, I would say to change your immediate environment often, learn how to deal with human nature, and learn how to influence those who are insincere or who lack humility.
 
 In any case, if you hurt other people because they have expectations of you, that’s their problem. If they have an agreement with you, it’s your problem. But, if they have an expectation of you, that’s completely their problem. It has nothing to do with you. They’re going to have lots of expectations out of life. The sooner you can dash their expectations, the better.
 
@@ -112,10 +112,8 @@ Having a good standard for friends will also set you up for success in all ways.
 
 In the end, you can choose meaning in your life or you can choose comfort.
 
-If you do not spend the energy you receive you will likely waste it via masturbation. One thing you need to realise is that because MO is mentally linked to porn, you don't want to be using it as a substitute for PMO if you waste your energy via MO. While MO has drawbacks, energy can be regathered within a week generally, while with porn, it takes weeks or months for the body/mind to recover.
+If you do not spend the energy you receive you will likely waste it via masturbation. One thing you need to realize is that because MO is mentally linked to porn, you don't want to be using it as a substitute for PMO if you waste your energy via MO. While MO has drawbacks, energy can be regathered within a week generally, while with porn, it takes months for the body/mind to recover.
 
-If you masturbate or have sex too often it will negatively impact your body and energy levels. Instead of wasting your energy, look for the value within sexual energy, and it can be transmuted into things you find meaningful.
-
-This is how you can propel and find movement in your life.
+If you masturbate or have sex too often it will negatively impact your body and energy levels. Instead of wasting your energy, look for the value within sexual energy, and it can be transmuted into things you find meaningful - this is how you can propel and find movement in your life.
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Diagram explaining essentialism and direction of energy (not found)" src="http://localhost:8080/md_images/essentialism.png" height="250px" class="mdimg"></div>
