--- a/src/markdown/english/9. Understandings.md
+++ b/src/markdown/english/9. Understandings.md
@@ -23,3 +23,5 @@ And when one is bored it is the birth of creativity - the birth of change. In ti
 ## Substitution
 
 In substitution there is no understanding. If you look closely you will see that substitution is nothing but a search for comfort and security and escape; not a search for understanding, not a search for truth, but rather a search for an evasion.
+
+In subsitution there is a lack of understanding - or at least in the sense that you believe PMO needs replacing in some form.
