--- a/src/markdown/english/2. Stray Cat.md
+++ b/src/markdown/english/2. Stray Cat.md
@@ -1,20 +1,20 @@
-When everyone is sick, we no longer consider it a disease. When illness and self-limitation is so normalised that its absence is classed as unnormal, you know it is deeply ingrained in society.
+When everyone is sick, we no longer consider it a disease. When illness and self-limitation are so normalized that their absence is classed as unnormal, you know it is deeply ingrained in society.
 
-You might have heard of "nofap" before, but if you have not, most people hear about it in a similar way. Through a YouTube video that popped up as a suggestion, a link a friend sent us, or even a meme. If you have been linked this book, you must have been intregued to see what lies within. However, for those of you that have already heard of "nofap" you will likely know the sad truth around the "community" of hopeless users in the same cycle.
+You might have heard of "nofap" before, but if you have not, most people hear about it in a similar way. Through a YouTube video that popped up as a suggestion, a link a friend sent us, or even a meme. If you have been linked to this book, you must have been intrigued to see what lies within. However, for those of you that have already heard of "nofap", you will likely know the sad truth about the "community" of hopeless users in the same cycle.
 
-Most people join the bandwagon of porn, as most people use it, so 'it must be fine', denouncing any evidence proving them wrong as they would rather be blissful in ignorance than living in truth. However, nothing can escape the fact that PMO has numerous adverse effects on the 'casual' user and 'heavy' user alike.
+Most people join the bandwagon of porn, as most people use it, so 'it must be fine', denouncing any evidence proving them wrong as they would rather be blissful in ignorance than live in truth. However, nothing can escape the fact that PMO has numerous adverse effects on the 'casual' user and 'heavy' user alike.
 
-Over the decades, hypersexualization has increased, and people are further pushing the limits of what they believe to be acceptable. Questions on purity are answered with delusion and as a result, purity is ever-more thrown out of the window. Internet porn adds fuel to the fire in this regard. In this age of information, everything can be accessed immediately, for free. This makes impulsive decisions easier as there is little resistance in between getting what you want.
+Over the decades, hypersexualization has increased, and people are further pushing the limits of what they believe to be acceptable. Questions on purity are answered with delusion and as a result, purity is ever-more thrown out of the window. Internet porn adds fuel to the fire in this regard. In this age of information, everything can be accessed immediately, for free. This makes impulsive decisions easier as there is little resistance to getting what you want.
 
 This hypersexualization has risen along with porn and masturbation use, which are both damaging to productivity and performance. Pornography and hypersexualization are some of the biggest, but at the same time most overlooked, problems of the modern world.
 
-If you want to know some stats, the average age that most people first see pornography is 11 years old. Children under the age of 10 make up 22% of online porn consumption for those under 18. Imagine your 10 year old son or daughter viewing the front page of a porn site behind close doors. It is almost sickly to think about.
+If you want to know some stats, the average age that most people first see pornography is 11 years old. Children under the age of 10 make up 22% of online porn consumption for those under 18. Imagine your 10-year-old son or daughter viewing the front page of a porn site behind closed doors. It is almost sickly to think about.
 
 This is the modern struggle: Lone individuals summoning inhuman willpower, fasting, meditating, and exercising... Up against armies of scientists and statisticians weaponizing abundant food, screens, and medicine into junk food, clickbait news, infinite porn, endless games, and addictive drugs. But just what are the negative effects?
 
 Porn mainly has negative effects to do with the dopaminergic (dopamine) system. Masturbation on its own significantly decreases 30+ vitamins/nutrients, bodily energy, and life force (what you could call "aura"). When porn and masturbation are combined these effects are multiplied. This is important because to have peace of mind, you have to have peace of body first.
 
-Negative effects span from low energy, low motivation, lessened ability to do work, lowered respect for women, depression, anxiety when interacting with others, porn-induced erectile dysfunction, relationship problems, acne, obsession with porn and fantasies, questioning sexuality despite no previous interest, and more. General rule of thumb is physical negatives are to do with frequent masturbation and mental negatives are to do with porn.
+Negative effects span from low energy, low motivation, lessened ability to do work, lowered respect for women, depression, anxiety when interacting with others, porn-induced erectile dysfunction, relationship problems, acne, obsession with porn and fantasies, questioning sexuality despite no previous interest, and more. A general rule of thumb is physical negatives are to do with frequent masturbation and mental negatives are to do with porn.
 
 **People believe "nofap" provides benefits, but it is really the negatives of PMO itself being absent.**
 
@@ -24,7 +24,7 @@ So, let's return to the idea that we might have discovered nofap through a YouTu
 
 This is because people approach leaving PMO with a need for motivation. Some things can be broken with motivation, but habits/addictions cannot. Many "influencers" also use motivation as the primary cause for doing nofap. **Motivation is temporary**.
 
-To me, the mind should be a servant and a tool, not a master. The monkey mind should not control and drive you 24/7. Personally, I’m not going to be the most successful person on the planet, nor do I want to be. I just want to be the most successful version of myself while working the least hard possible. And with energy sinks like porn and masturbation in life, it will hinder these kinds of aspirations, and your journey of growth.
+To me, the mind should be a servant and a tool, not a master. The monkey mind should not control and drive you 24/7. Personally, I’m not going to be the most successful person on the planet, nor do I want to be. I just want to be the most successful version of myself while working the least hard possible. And with energy sinks like porn and masturbation in life, it will hinder these kinds of aspirations and your journey of growth.
 
 ## False Incentives
 
@@ -40,6 +40,6 @@ False incentives provide the ammo to fuel your brain's defense mechanisms. As a 
 
 Forget the initial incentive for being interested or wanting to quit. Freedom must be found on one's own accord; not by or for external influence.
 
-Everyone is caught up in suffering and conflict, but most people are unconscious of that conflict; they are merely seeking substitutions, solutions, and escapes. Whereas if they cease seeking escapes and begin to question the environment that causes that conflict, then the mind becomes acute, alive and intelligent.
+Everyone is caught up in suffering and conflict, but most people are unconscious of that conflict; they are merely seeking substitutions, solutions, and escapes. Whereas if they cease seeking escapes and begin to question the environment that causes that conflict, then the mind becomes acute, alive, and intelligent.
 
 Do not quit for anybody else. Quit for yourself.
