--- a/src/markdown/english/3. Effects.md
+++ b/src/markdown/english/3. Effects.md
@@ -1,58 +1,58 @@
 Leaving PMO provides many benefits and positives, as detailed in the introduction. These positives come from the changes in our neurochemistry, bodily nutrients, and our ability to control our reactions to emotions. However, technically, leaving PMO has no positives - it is just the removal of negatives.
 
-Imagine someone said they wore shoes all day that were too tight, just so they could experience pleasure when they took them off in the evening. Do you think that makes sense? Of course not. You wouldn’t say that tight shoes provide pleasure. But as soon as a porn user finishes a PMO session, their dopamine levels crash lower than a non-user. They feel irritable, similar to if they were wearing tight shoes. Chemicals also flood the brain causing a lethargic effects (but critically not a relaxing one).
+Imagine someone said they wore shoes all day that were too tight, just so they could experience pleasure when they took them off in the evening. Do you think that makes sense? Of course not. You wouldn’t say that tight shoes provide pleasure. But as soon as a porn user finishes a PMO session, their dopamine levels crash lower than a non-user. They feel irritable, similar to if they were wearing tight shoes. Chemicals also flood the brain causing lethargic effects (but not relaxing because of the dopamine drop after orgasm).
 
-Thus, the porn trap is similar to wearing tight shoes just to obtain the pleasure of taking them off, and doing this over and over again.
+Thus, the porn trap is similar to wearing tight shoes just to obtain the pleasure of taking them off and doing this over and over again.
 
-Porn users — just like all other drug users — are constantly trying to get back to the same level of happiness and relaxation that non-users experience in everyday life. However, you don't notice this. It has happened so slowly, so gradually, that like the "boiling frog", you did not notice.
+Porn users — just like drug users — are constantly trying to get back to the same level of happiness and relaxation that non-users experience in everyday life. However, you don't notice this. It has happened so slowly, so gradually, that like the "boiling frog", you did not notice.
 
-Do not make the mistake of normalizing porn. Because people have used it for so long, they find it hard to relate to when they didn't, and most used language to suggest benefits or that leaving PMO is not the normal. While in a societal sense, it may be the 'norm', in a bodily sense, it is not natural. Naturally, nobody has urges to watch lewd video clips as a reaction to emotion. Nobody tries to escape negative emotions by tricking our bodies into connections to partners we will never know. Porn is not natural and never will be. It is a man-made trap. Masturbation too, has been around for a while, but on its own, it still drains your energy, and is just another outlet for hypersexualization.
+Do not make the mistake of normalizing porn. Because people have used it for so long, they find it hard to relate to when they didn't, and most used language to suggest benefits or that leaving PMO is not the normal. While in a societal sense, it may be the 'norm', in a bodily sense, it is not natural. Naturally, nobody has urges to watch lewd video clips as a reaction to emotion. Nobody tries to escape negative emotions by tricking our bodies into connections to partners we will never know. Porn is not natural and never will be. It is a man-made trap. Masturbation too has been around for a while, but on its own, it still drains your energy and is just another outlet for hypersexualization.
 
-Therefore make this key understanding - **The benefits of leaving porn/masturbation are not direct benefits, but are just the end of negatives.**
+Therefore make this key understanding - **The benefits of leaving porn/masturbation are not direct benefits but are just the end of negatives.**
 
 ## Dopamine
 
 Contrary to popular belief, dopamine's main effect is not pleasure. Dopamine's primary effect is to do with anticipation/excitement. Some may even call it the "motivation" chemical.
 
-Disfunctions in the dopaminergic system result in unhealthy changes in anticipation and it causes immeasurable effects on a person's life.
+Dysfunctions in the dopaminergic system result in unhealthy changes in anticipation and it causes immeasurable effects on a person's life.
 
 <div title="Dopamine Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;filter:contrast(100%)"><img alt="Image of dopamine structure (not found)" src="http://localhost:8080/md_images/dopamine.png" height="250px"></div>
 
-What happens with porn is the dopamine system becomes downregulated. When we are with a single partner, the body places a limitation on the amount of dopamine that can be created. Porn however, releases more and more dopamine when you seek-and-search through multiple partners for "just the right video".
+What happens with porn is the dopamine system becomes downregulated. When we are with a single partner, the body limits the amount of dopamine that can be created. Porn, however, releases more and more dopamine when you seek and search through multiple partners for "just the right video".
 
 This is called the Coolidge Effect.
 
-A male rat feels satisfied after mating with the same female a few times. Each time he mates with her, less dopamine is released, and he takes longer breaks. This is good, otherwise he’d exhaust himself for no reason. But if he sees a brand new female, a new dopamine surge takes over, and he is compelled to mate again. As more and more new females are introduced, he will eventually collapse from exhaustion.
+A male rat feels satisfied after mating with the same female a few times. Each time he mates with her, less dopamine is released, and he takes longer breaks. This is good, otherwise, he’d exhaust himself for no reason. But if he sees a brand new female, a new dopamine surge takes over, and he is compelled to mate again. As more and more new females are introduced, he will eventually collapse from exhaustion.
 
 What happens with porn is the same effect, with people online that the primitive part of your mind views as "partners". Because this happens, an unnatural and irregular amount of dopamine is released.
 
-You may think that a huge amount of dopamine would make you feel better, but that is misunderstanding how dopamine works. **You could compare it to putting 10,000 volts through a machine that works perfectly fine at 240 volts**. You don't get enhanced performance, you merely cook the machine.
+You may think that a huge amount of dopamine would make you feel better, but that is a misunderstanding of how dopamine works. **You could compare it to putting 10,000 volts through a machine that works perfectly fine at 240 volts**. You don't get enhanced performance, you merely cook the machine.
 
 To compensate for the unnaturally high amount of dopamine that has entered your body, your dopamine system gets **downregulated**.
 
 <div title="Downregulation Process" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of downregulation process (not found)" src="http://localhost:8080/md_images/downregulation.jpeg" height="250px"></div>
 
-You may think that the body makes everything fine again, but this is ignoring the side-effects of this downregulation. First of all, the body builds a dependance upon porn as it becomes further downregulated every consecutive viewing, and nothing else will give that same level of dopamine it needs to feel "normal".
+You may think that the body makes everything fine again, but this is ignoring the side effects of this downregulation. First of all, the body builds a dependence upon porn as it becomes further downregulated every consecutive viewing, and nothing else will give that same level of dopamine it needs to feel "normal".
 
-The second, and worst, effect of this downregulation is that things which provide lesser dopamine now provide even less dopamine. Therefore, you have lesser or even no incentive to do these things. Things like reading, having a single focus, enjoying creativity, cooking well, taking care of yourself, etc, are less satisfying to do. It can get to the point that those far into the trap of porn do not take care of themselves at all.
+The second and worst effect of this downregulation is that things that provide lesser dopamine now provide even less dopamine. Therefore, you have lesser or even no incentive to do these things. Things like reading, having a single focus, enjoying creativity, cooking well, taking care of yourself, etc, are less satisfying to do. It can get to the point that those far into the trap of porn do not take care of themselves at all.
 
-One of the most prevalent problems that porn creates is anxiety. The misdirection of sexual energy also causes a lack of confidence, and testosterone is lowered indirectly through self neglect (part of dopamine desensatization). It also makes you less incentivized to be social (through less of a dopamine reward), which in turn amounts to anxiety.
+One of the most prevalent problems that porn creates is anxiety. The misdirection of sexual energy also causes a lack of confidence, and testosterone is lowered indirectly through self-neglect (part of dopamine desensitization). It also makes you less incentivized to be social (through less of a dopamine reward), which in turn amounts to anxiety.
 
-You may make fun of these people who go into a state of disarray ("coomers") but it is a sad story. Tiktok, video games, procrastination all become more attractive when the dopaminergic system becomes downregulated. Life becomes more hedonistic, and the lack of growth eventually brings pain.
+You may make fun of these people who go into a state of disarray ("coomers") but it is a sad story. Tiktok, video games, and procrastination all become more attractive when the dopaminergic system becomes downregulated. Life becomes more hedonistic, and the lack of growth eventually brings pain.
 
-The good thing is that the damage to the dopamine receptors is not permanent. You have the ability to upregulate your dopamine receptors after this damage through stopping porn use and other unnaturally high dopamine activities. Your greatest superpower is the ability to change yourself.
+The good thing is that the damage to the dopamine receptors is not permanent. You have the ability to upregulate your dopamine receptors after this damage by stopping porn use and other overstimuli. Your greatest superpower is the ability to change yourself.
 
 <div title="Some Brain" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a brain (not found)" src="http://localhost:8080/md_images/brain_color.png" height="250px"></div>
 
 Increased brain fog is another effect that porn creates. Porn lowers brain chemicals (acetylcholine) vital in cognitive functioning. This can make active users feel like they are less able to function actively than before (however, not many people realize it because this happens slowly). Porn also has been studied to decrease gray matter in the brain.
 
-Dopamine is the reason that motivation does not work for becoming free from porn (and addictions in general). Dopamine is a large part of motivation itself. And if the anticipation for porn outweighs the anticipation for quitting, then you will relapse. Then what works? Understanding of truth. Deep understandings, that are not beliefs, that bring reality to the light: this is what works.
+Dopamine is the reason that motivation does not work for becoming free from porn (and addictions in general). Dopamine is a large part of motivation itself. And if the anticipation of porn outweighs the anticipation of quitting, then you will relapse. Then what works? Understanding of truth. Deep understandings, that are not beliefs, that bring reality to the light: this is what works.
 
-Porn use also contributes to Dopamine Deficient Depression (DDD), as the low dopamine periods without porn are not at the levels they are meant to be. This can cause low energy, drowsiness, the inability to feel enthusiastic about anything, no motivation and excessive sleep.
+Porn use also can contribute to Dopamine Deficient Depression (DDD), as the low dopamine periods without porn are not at the levels they are meant to be. This can cause low energy, drowsiness, the inability to feel enthusiastic about anything, lowered motivation, and excessive sleep.
 
-PIED (Porn-Induced Erectile Disfunction) is another effect that comes from porn use (usually long-term). For those who have not experienced it, they may say "that will never happen", however, as comsumption becomes more impulsive and obsessive, it can make in-real-life experiences not turn you on.
+PIED (Porn-Induced Erectile Dysfunction) is another effect that comes from porn use (usually long-term). For those who have not experienced it, they may say "that will never happen", however, as consumption becomes more impulsive and obsessive, it can make in-real-life experiences not turn you on.
 
-There are even more mental and physical negatives of porn I could dive into. I could go into all of the complex neurochemistry, I could tell you about chemicals you don't really need to know but I won't. Why? Because knowing the negatives of porn is not what will allow you to leave. There are detailed and reviewed studies on the effects of porn (such as YourBrainOnPorn) and other internet subcultures. However, these are not enough to rid the mind of the brainwashing and are never enough reasoning to make the user quit.
+There are even more mental and physical negatives of porn I could dive into. I could go into all of the complex neurochemistry, and I could go into scientific terms, etc but I won't obsess over it. Why? Because simply knowing the negatives of porn is not what will allow you to leave. There are detailed and reviewed studies on the effects of porn (such as YourBrainOnPorn) and other internet subcultures. However, these are not enough to rid the mind of the brainwashing and are never enough reasoning to make the user quit.
 
 This is because your brain does not care about negatives when it is in a reactionary state; it reacts to emotions through the pathways you have used the most. Think about your other negative habits. Does knowing how they impact your health really stop you?
 
@@ -60,11 +60,11 @@ This is because your brain does not care about negatives when it is in a reactio
 
 Sex is not MO (Masturbation & Orgasm) but semen release still has the same effects for both of them. However, MO is void of love and meaning; it is wasting energy for little purpose.
 
-When the body releases sperm, it expends significant amounts of: Vitamin A, Vitamin B, RIBOFLAVIN, NIACIN, PANTHOTENIC ACID, PYRIDOXINE, COBALAMIN, BIOTIN, ABSORBIC ACID, CHOLINE, CALCIFEROL, ALPHA-TOCOPHEROL, FOLIC ACID, PHYLLOQUINONE, MENADIONE, CALCIUM, CHLORIDE, CHROMIUM, CHROMIUM, COPPER, IODINE, IRON, MAGNESIUM, MANGANESE, MOLYBDENUM, PHOSPHORUS, POTASSIUM, SELENIUM, SODIUM, SULFUR, ZINC and other nutrients.
+When the body releases sperm, it expends significant amounts of Vitamin A, ABSORBIC ACID, Vitamin B, RIBOFLAVIN, NIACIN, PANTOTHENIC ACID, PYRIDOXINE, COBALAMIN, BIOTIN, CHOLINE, CALCIFEROL, ALPHA-TOCOPHEROL, FOLIC ACID, PHYLLOQUINONE, MENADIONE, CALCIUM, CHLORIDE, CHROMIUM, CHROMIUM, COPPER, IODINE, IRON, MAGNESIUM, MANGANESE, MOLYBDENUM, PHOSPHORUS, POTASSIUM, SELENIUM, SODIUM, SULFUR, ZINC, and other nutrients.
 
-This release results in lowered bodily energy, lowered hair health, lowered libido/aura, possible acne and other effects.
+This release results in lowered bodily energy, lowered hair health, lowered libido/aura, possible acne, and other effects.
 
-Semen release also increases prolactin (in both sex and masturbation), and prolactin is not good for male health. ((tbf))
+Semen release also increases prolactin, in both sex and masturbation, and too much prolactin is negative for male health.
 
 People call masturbation "self-love" but really it is self-sabotage. When sexual energy is harnessed, it is a tool. But when untrained, it is nothing but a restriction to productivity, if that is what you seek.
 
@@ -74,9 +74,9 @@ I have talked about dopamine being mostly an anticipation chemical. This is true
 
 On orgasm, endorphins are released. However, at the same time, the dopamine that was elevated in the build-up crashes down.
 
-The orgasm doesn’t relax you, it drains your energy. As soon as you finish, you’re in the comedown/crashing state (feeling crappy), and are more likely to get irritated and impatient with other people. Real relaxation is a feeling of peace and balance, and it would restore your energy. When you are truly relaxed and confident, it makes you more creatively productive. However porn cannot help with relaxation - only freedom is relaxing. Porn users - just like all other drug users - are constantly trying to get back to the same level of happiness and relaxation that non-users experience in everyday life.
+The orgasm doesn’t relax you, it drains your energy. As soon as you finish, you’re in the comedown/crashing state (feeling crappy) and are more likely to get irritated and impatient with other people. Real relaxation is a feeling of peace and balance, and it would restore your energy. When you are truly relaxed and confident, it makes you more creatively productive. However, porn cannot help with relaxation - only freedom is relaxing. Porn users - just like all other drug users - are constantly trying to get back to the same level of happiness and relaxation that non-users experience in everyday life.
 
-*If you remove dopamine from a human*, even if you give them heroin, it will not be addictive. Opioids are not what make you want to do something, and they (if dopamine did not exist) do not make you addicted.
+*If you remove dopamine from a human*, even if you give them heroin, it will not be addictive. Opioids are not what makes you want to do something, and if dopamine did not exist, they would not make you addicted.
 
 **You do not use porn for the orgasm, but for the dopamine released before the orgasm happens.**
 
@@ -84,8 +84,8 @@ It is a really strange thing when dopamine anticipates itself. People justify po
 
 There was a study where scientists used a dopamine-blocking agent in rats to see what would happen. They did nothing, they did not drink, did not eat, and in a short amount of time all of the rats died.
 
-It does not matter how appealing something is, the health of your dopamine system makes it more likely or less likely you will be attracted towards the thing. You may have goals and dreams in the sense of your higher being/self, but with downregulated dopamine, those will stay as hopes and dreams, as the dopamine of completing those is less than porn. I hope you can see why this leads to living like a slob and lack of care for one's self.
+It does not matter how appealing something is, the health of your dopamine system makes it more likely or less likely you will be attracted to the thing. You may have goals and dreams in the sense of your higher being/self, but with downregulated dopamine, those will stay as hopes and dreams, as the dopamine of completing those is less than porn. I hope you can see why this leads to living like a slob and a lack of care for one's self.
 
-You know we have lost all sense of living normally, simply, directly. To get back to that normality, that simplicity, that directness, you cannot follow methods, you cannot merely become automatic machines; and I am afraid most of us are seeking methods because we think that through them we shall realise fullness, stability and permanency. To me, methods lead to slow stagnation and decay and they have nothing to do with real self-growth, which is after all, the summation of intelligence.
+The stereotype of porn addicts looking like a slob is true because dopamine desensitization makes them not care about or spend any time on their appearance. However, if one takes control of their dopaminergic system, they can take control of their life.
 
-The stereotype of porn addicts looking like a slob is true, because dopamine desensitization makes them not care about or spend any time on their appearance. However, if one takes control of their dopaminergic system, they can take control of their life.
+You know we have lost all sense of living normally, simply, directly. To get back to that normality, that simplicity, that directness, you cannot follow methods, you cannot merely become automatic machines; and I am afraid most of us are seeking methods because we think that through them we shall realize fullness, stability, and permanency. To me, methods lead to slow stagnation and decay and they have nothing to do with real self-growth, which is, after all, the summation of intelligence.
